--- a/lessons/lessons.css
+++ b/lessons/lessons.css
@@ -17,32 +17,6 @@ div.top-bar{
     align-items: center;
 }
 
-div.progress-section{
-    float: right;
-    margin-top: 3.5vh;
-    margin-right: 3vw;
-    display: flex;
-    align-items: center;
-}
-
-div.progress{
-    background-color: #fafafa;
-    border-radius: 22px;
-    height: 2.5vh;
-    width: 15vw;
-}
-
-div.progress-done{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: repeating-linear-gradient(to left, #13f75e, #13f75e);
-    border-radius: 20px;
-    color: #fafafa;
-    height: 100%;
-    width: 0;
-}
-
 div.lesson-container{
     height: 120vh;
     width: 100vw;
@@ -110,6 +84,8 @@ button.drop-button:hover, button.submit-button:hover{
     padding: 1.5vh 1vw;
     min-width: 20vw;
     border-radius: 10px;
+    height: 40vh;
+    overflow: scroll;
 }
   
 .dropdown-content a {
